--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <input type="text" name="ID" class="form-control" placeholder="ID">
                         </div>
                         <div class="form-group">
-                            <input type="password" name="password" class="form-control" placeholder="PassWord">
+                            <input type="password" name="password" class="form-control" placeholder="Password">
                         </div>
                         <div class="text-center">
                             <button type="submit" class="btn btn-primary">Log-In</button>
