--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <script src="js/owl.carousel.min.js" type="text/javascript"></script>
     </head>
     <body>
-    <!--<div id="screen"></div>
+    <div id="screen"></div>
     <div id="notice">
         <div class="notice-wrap">
             <img src="images/sale.jpg" alt="slae-notice">
             <button class="notice-btn">CLOSE</button>
         </div>
-    </div>-->
+    </div>
     
     <div id="login-popup">
         <div class="login-wrap">
