--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			    <h2>BEST-SELLER</h2>
 			    <ul>
 				    <li>
-					    <a class="click-modal" data-image="images/women1x250.png" href="javascript:void(0)">
+					    <a class="click-modal" data-image="images/women1.png" href="javascript:void(0)">
 						    <div class="wrap">
 							    <img src="images/women1x250.png" alt="에어 조던 1 레트로 하이 BHM">
 							    <div class="contents">
@@ -119,7 +119,7 @@
 					    </a>
 				    </li>
 				    <li>
-					    <a class="click-modal" data-image="images/women6x250.png" href="javascript:void(0)">
+					    <a class="click-modal" data-image="images/women6.png" href="javascript:void(0)">
 						    <div class="wrap">
 							    <img src="images/women6x250.png" alt="에어맥스 제로 SI">
 							    <div class="contents">
@@ -129,7 +129,7 @@
 					    </a>
 				    </li>
 				    <li>
-					    <a class="click-modal" data-image="images/boys1x250.png" href="javascript:void(0)">
+					    <a class="click-modal" data-image="images/boys1.png" href="javascript:void(0)">
 						    <div class="wrap">
 							    <img src="images/boys1x250.png" alt="나이키 다이나모 프리">
 							    <div class="contents">
@@ -139,7 +139,7 @@
 					    </a>
 				    </li>
 				    <li>
-					    <a class="click-modal" data-image="images/men4x250.png" href="javascript:void(0)">
+					    <a class="click-modal" data-image="images/men4.png" href="javascript:void(0)">
 						    <div class="wrap">
 							    <img src="images/men4x250.png" alt="조던 B. 플라이">
 							    <div class="contents">
@@ -151,7 +151,7 @@
 			    </ul>
 		    </div>
 		    <div class="clear"></div>
-            <div class="new-arrival mt10">
+            <div class="new-arrival mt20">
 			    <h2>NEW ARRIVAL</h2>
                 <div class="owl-carousel owl-theme">
                     <div class="item">
@@ -221,81 +221,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!--<div class="slide">
-                    <div class="owl-carousel owl-theme">
-                        <ul>
-                            <li>
-                                <div class="wrap">
-                                    <img src="images/girls3x250.png" alt="나이키 로쉬 원">
-                                    <span>2컬러</span>
-                                    <dl>
-                                        <dt title="나이키 로쉬 원">나이키 로쉬 원</dt>
-                                        <dd>베이비 신발 (120-160mm)</dd>
-                                        <dd>65,000원</dd>
-                                    </dl>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="wrap">
-                                    <img src="images/women5x250.png" alt="에어맥스 제로 SI">
-                                    <span>3컬러</span>
-                                    <dl>
-                                        <dt title="에어맥스 제로 SI">에어맥스 제로 SI</dt>
-                                        <dd>WOMEN 신발 라이프스타일</dd>
-                                        <dd>169,000원</dd>
-                                    </dl>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="wrap">
-                                    <img src="images/men3x250.png" alt="나이키 카이리 3">
-                                    <span>2컬러</span>
-                                    <dl>
-                                        <dt title="나이키 카이리 3">나이키 카이리 3</dt>
-                                        <dd>MEN 신발 트레이닝 & 짐</dd>
-                                        <dd>179,000원</dd>
-                                    </dl>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="wrap">
-                                    <img src="images/boys6x250.png" alt="나이키 주니어 머큐리얼 빅토리 VI TF">
-                                    <span>1컬러</span>
-                                    <dl>
-                                        <dt title="나이키 주니어 머큐리얼 빅토리 VI TF">나이키 주니어 머큐리얼 빅토리 VI TF</dt>
-                                        <dd>주니어 축구화 (225-250mm)</dd>
-                                        <dd>69,000원</dd>
-                                    </dl>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="wrap">
-                                    <img src="images/girls2x250.png" alt="나이키 탄준">
-                                    <span>1컬러</span>
-                                    <dl>
-                                        <dt title="나이키 탄준">나이키 탄준</dt>
-                                        <dd>주니어 신발 (225-250mm)</dd>
-                                        <dd>75,000원</dd>
-                                    </dl>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="wrap">
-                                    <img src="images/men5x250.png" alt="나이키 마지스타 오브라 II FG">
-                                    <span>2컬러</span>
-                                    <dl>
-                                        <dt title="나이키 마지스타 오브라 II FG">나이키 마지스타 오브라 II FG</dt>
-                                        <dd>MEN 축구화</dd>
-                                        <dd>189,000원</dd>
-                                    </dl>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <button class="prev">&laquo;</button>
-                    <button class="next">&raquo;</button>
-                </div>-->
 		    </div>
 	    </article>
 
@@ -303,7 +228,7 @@
 		    <h1>MEN</h1>
 		    <ul>
 			    <li>
-				    <a class="click-modal" data-image="images/men1x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/men1.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/men1x250.png" alt="나이키 프리 런 디스턴스 2">
 						    <dl>
@@ -315,7 +240,7 @@
 				    </a>
 			    </li>
 			    <li>
-				    <a class="click-modal" data-image="images/men2x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/men2.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/men2x250.png" alt="나이키 삭다트 SE">
 						    <dl>
@@ -327,7 +252,7 @@
 				    </a>
 			    </li>
 			    <li>
-				    <a class="click-modal" data-image="images/men5x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/men5.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/men5x250.png" alt="나이키 마지스타 오브라 II FG">
 						    <dl>
@@ -339,7 +264,7 @@
 				    </a>
 			    </li>
 			    <li>
-				    <a class="click-modal" data-image="images/men6x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/men6.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/men6x250.png" alt="나이키 줌 트레인 컴플리트">
 						    <dl>
@@ -357,7 +282,7 @@
 		    <h1>WOMEN</h1>
 		    <ul>
 			    <li>
-				    <a class="click-modal" data-image="images/women1x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/women1.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/women1x250.png" alt="에어 조던 1 레트로 하이 BHM">
 						    <dl>
@@ -369,7 +294,7 @@
 				    </a>
 			    </li>
 			    <li>
-				    <a class="click-modal" data-image="images/women2x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/women2.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/women2x250.png" alt="에어 허라치 런 울트라 SI">
 						    <dl>
@@ -381,7 +306,7 @@
 				    </a>
 			    </li>
 			    <li>
-				    <a class="click-modal" data-image="images/women3x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/women3.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/women3x250.png" alt="나이키 삭다트 프리미엄">
 						    <dl>
@@ -393,7 +318,7 @@
 				    </a>
 			    </li>
 			    <li>
-				    <a class="click-modal" data-image="images/women4x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/women4.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/women4x250.png" alt="나이키 줌 피어리스 플라이니트M">
 						    <dl>
@@ -411,7 +336,7 @@
 		    <h1>KIDS</h1>
 		    <ul>
 			    <li>
-				    <a class="click-modal" data-image="images/boys1x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/boys1.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/boys1x250.png" alt="나이키 다이나모 프리">
 						    <span>3컬러</span>
@@ -424,7 +349,7 @@
 				    </a>
 			    </li>
 			    <li>
-				    <a class="click-modal" data-image="images/boys2x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/boys2.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/boys2x250.png" alt="나이키 다이나모 프리">
 						    <span>3컬러</span>
@@ -437,7 +362,7 @@
 				    </a>
 			    </li>
 			    <li>
-				    <a class="click-modal" data-image="images/boys3x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/boys3.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/boys3x250.png" alt="나이키 다이나모 프리">
 						    <span>3컬러</span>
@@ -450,7 +375,7 @@
 				    </a>
 			    </li>
 			    <li>
-				    <a class="click-modal" data-image="images/boys4x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/boys4.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/boys4x250.png" alt="나이키 주니어 머큐리얼 빅토리 VI HG-V">
 						    <span>2컬러</span>
@@ -463,7 +388,7 @@
 				    </a>
 			    </li>
 			    <li>
-				    <a class="click-modal" data-image="images/girls1x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/girls1.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/girls1x250.png" alt="나이키 허라치 프린트">
 						    <span>1컬러</span>
@@ -476,7 +401,7 @@
 				    </a>
 			    </li>
 			    <li>
-				    <a class="click-modal" data-image="images/girls4x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/girls4.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/girls4x250.png" alt="나이키 로쉬 원">
 						    <span>2컬러</span>
@@ -489,7 +414,7 @@
 				    </a>
 			    </li>
 			    <li>
-				    <a class="click-modal" data-image="images/girls5x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/girls5.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/girls5x250.png" alt="에어 조던 13 레트로 GT">
 						    <span>1컬러</span>
@@ -502,7 +427,7 @@
 				    </a>
 			    </li>
 			    <li>
-				    <a class="click-modal" data-image="images/girls6x250.png" href="javascript:void(0)">
+				    <a class="click-modal" data-image="images/girls6.png" href="javascript:void(0)">
 					    <div class="wrap">
 						    <img src="images/girls6x250.png" alt="나이키 허라치 프린트">
 						    <span>2컬러</span>
