--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 	    </div>
     </footer>
 
-    <div id="modal" class="wow fadeInUp">
+    <div id="modal">
 	    <div class="popup-contents">
 		    <div class="top">
 			    <h3 id="title">자세히 보기</h3>
