--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
     </head>
     <body>
     <div id="screen"></div>
-    <div id="notice">
-        <div class="notice-wrap">
-            <img src="images/sale.jpg" alt="slae-notice">
-            <button class="notice-btn">CLOSE</button>
-        </div>
-    </div>
     
     <div id="login-popup">
         <div class="login-wrap">
@@ -67,34 +61,39 @@
                     <li><a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart</a></li>
                 </ul>
             </div>
-		    <nav>
-			    <ul class="nav">
-				    <li class="main-menu"><a href="#best">BEST</a>
-					    <ul class="sub-menu">
-						    <li><a href="#">BEST-SELLER</a></li>
-						    <li><a href="#">NEW ARRIVAL</a></li>
-					    </ul>
-				    </li>
-				    <li class="main-menu"><a href="#men">MEN</a>
-					    <ul class="sub-menu">
-						    <li><a href="#">BEST-SELLER</a></li>
-						    <li><a href="#">NEW ARRIVAL</a></li>
-					    </ul>
-				    </li >
-				    <li class="main-menu"><a href="#women">WOMEN</a>
-					    <ul class="sub-menu">
-						    <li><a href="#">BEST-SELLER</a></li>
-						    <li><a href="#">NEW ARRIVAL</a></li>
-					    </ul>
-				    </li>
-				    <li class="main-menu"><a href="#kids">KIDS</a>
-					    <ul class="sub-menu">
-						    <li><a href="#">BEST-SELLER</a></li>
-						    <li><a href="#">NEW ARRIVAL</a></li>
-					    </ul>
-				    </li>
-			    </ul>
-		    </nav>
+            <nav>
+                <ul>
+                    <li>
+                        <a class="dropdown" href="#">BEST</a>
+                        <ul class="submenu">
+                            <li><a href="#">BEST-SELLER</a></li>
+                            <li><a href="#">NEW ARRIVAL</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a class="dropdown" href="#">MEN</a>
+                        <ul class="submenu">
+                            <li><a href="#">BEST-SELLER</a></li>
+                            <li><a href="#">NEW ARRIVAL</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a class="dropdown" href="#">WOMEN</a>
+                        <ul class="submenu">
+                            <li><a href="#">BEST-SELLER</a></li>
+                            <li><a href="#">NEW ARRIVAL</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a class="dropdown" href="#">KIDS</a>
+                        <ul class="submenu">
+                            <li><a href="#">BEST-SELLER</a></li>
+                            <li><a href="#">NEW ARRIVAL</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+
 		    <div class="sns">
 			    <a href="https://www.facebook.com/nike/" target="_blank" title="facebook 바로가기" class="facebook">facebook</a>
 			    <a href="https://twitter.com/nikestore?lang=ko" target="_blank" title="twitter 바로가기" class="twitter">twitter</a>
